@@ -1,10 +1,11 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.fractionsintro.matchinggame.view.fractions;
 
+import java.awt.Color;
+
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.piccolophet.nodes.kit.ZeroOffsetNode;
 import edu.colorado.phet.fractionsintro.intro.model.ContainerSet;
-import edu.colorado.phet.fractionsintro.intro.model.Fraction;
 import edu.umd.cs.piccolo.PNode;
 
 /**
@@ -13,9 +14,9 @@ import edu.umd.cs.piccolo.PNode;
  * @author Sam Reid
  */
 public class PieNode extends PNode {
-    public PieNode( final Fraction fraction, Property<ContainerSet> containerSet ) {
+    public PieNode( Property<ContainerSet> containerSet, Color color ) {
 
-        PieSetFractionNode pieSetFractionNode = new PieSetFractionNode( containerSet, new Property<Boolean>( true ) );
+        PieSetFractionNode pieSetFractionNode = new PieSetFractionNode( containerSet, new Property<Boolean>( true ), color );
         addChild( new ZeroOffsetNode( pieSetFractionNode ) );
 
         scale( 0.5 );
